@@ -1,3 +1,4 @@
+Matching game: Removed decimals
 # 0.00.07 (58023) Oct 26, 2011
 Matching game: Added "six plus signs pattern"
 Matching game: Added grid pattern
